# ChangeLog for net-zope/cmf
# Copyright 2003-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/cmf/Attic/ChangeLog,v 1.17 2005/03/19 17:08:55 weeve Exp $

  19 Mar 2005; Jason Wever <weeve@gentoo.org> cmf-1.4.7.ebuild:
  Added ~sparc keyword wrt bug #84791.

  21 Feb 2005; Simon Stelling <blubb@gentoo.org> cmf-1.4.7.ebuild:
  added ~amd64

  24 Sep 2004; Jodok Batlogg <batlogg@gentoo.org>; cmf-1.4.7.ebuild:
  marked stable

*cmf-1.4.7 (11 Sep 2004)

  11 Sep 2004; Heinrich Wendel <lanius@gentoo.org> +cmf-1.4.7.ebuild:
  version bump

*cmf-1.4.4 (27 Jul 2004)

  27 Jul 2004; Jodok Batlogg <batlogg@gentoo.org>; -cmf-1.3.1.ebuild,
  -cmf-1.4.2.ebuild, +cmf-1.4.4.ebuild:
  version bump, removed old versions, added to ~ppc

  16 Mar 2004; David Holm <dholm@gentoo.org> cmf-1.3.2.ebuild:
  Added to ~ppc.

  13 Mar 2004; David Holm <dholm@gentoo.org> cmf-1.4.2-r1.ebuild:
  Added to ~ppc.

*cmf-1.4.2-r1 (29 Jan 2004)

  29 Jan 2004; Heinrich Wendel <lanius@gentoo.org> cmf-1.3.1.ebuild,
  cmf-1.3.2.ebuild, cmf-1.4.1.ebuild, cmf-1.4.2-r1.ebuild, cmf-1.4.2.ebuild:
  remove ppc keywords; add DCWorkflow to ZPROD_LIST; mark 1.3.2 stable on x86

*cmf-1.4.2 (19 Jan 2004)

  19 Jan 2004; Heinrich Wendel <lanius@gentoo.org> cmf-1.4.2.ebuild,
  cmf-1.4.ebuild:
  version bump

*cmf-1.4.1 (10 Oct 2003)

  10 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> cmf-1.3.2.ebuild,
  cmf-1.4.1.ebuild:
  version bump on cmf-1.4 series and cleanups for both cmf-1.3.2 and
  cmf-1.4.1

*cmf-1.3.2 (10 Oct 2003)

  10 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> cmf-1.3.2.ebuild:
  version bump on cmf-1.3.2 for security fix

*cmf-1.4 (21 Jun 2003)

  21 Jun 2003; Jason Shoemaker <kutsuya@gentoo.org> cmf-1.4.ebuild:
  Version bump. This is the other slotted version. Masked all archs to
  unstable.

  21 Jun 2003; Jason Shoemaker <kutsuya@gentoo.org> cmf-1.3.1.ebuild:
  ~ppc -> ppc. CMF is now slotted because of plone.
