@@ -1,10 +1,12 @@
-MD5 273eecc410de23f2acada6b3533cf226 ChangeLog 2571
 MD5 0bd21c9026a86216222d9bcfbf6063c9 cmf-1.3.2.ebuild 587
+MD5 b239351e8a1af19bebe5a3658c07ecc9 cmf-1.4.7.ebuild 628
+MD5 bffe01ea2b0c7fd36b5b1b776236d25b cmf-1.5.0.ebuild 630
+MD5 273eecc410de23f2acada6b3533cf226 ChangeLog 2571
 MD5 e46aca693b48e1df318dce2e2f330ead cmf-1.4.2-r1.ebuild 602
 MD5 1bf88f1d81e1cb9432053533ebbf6f33 cmf-1.4.4.ebuild 599
 MD5 7890d88c5c6d189fbe6b187a3ebb6532 metadata.xml 161
-MD5 b239351e8a1af19bebe5a3658c07ecc9 cmf-1.4.7.ebuild 628
-MD5 34d3be0655c857447b8574eb7005f231 files/digest-cmf-1.4.4 61
-MD5 371e9a33722acc784fbbe12734fb395d files/digest-cmf-1.3.2 61
-MD5 f52277d74614e10fa6ffdff76db99a67 files/digest-cmf-1.4.7 61
 MD5 7ecf280be158d02f947cbc477aa0d24b files/digest-cmf-1.4.2-r1 61
+MD5 371e9a33722acc784fbbe12734fb395d files/digest-cmf-1.3.2 61
+MD5 34d3be0655c857447b8574eb7005f231 files/digest-cmf-1.4.4 61
+MD5 f52277d74614e10fa6ffdff76db99a67 files/digest-cmf-1.4.7 61
+MD5 49c7ffc900dfff6e902e6d5c1725d706 files/digest-cmf-1.5.0 61
