@@ -1,0 +1,1 @@
+MD5 4cc76ed768d5ffe10383ad43954b970e CMF-1.5.0.tar.gz 778284
