@@ -1,6 +1,11 @@
 # ChangeLog for net-zope/cmf
 # Copyright 2003-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/cmf/Attic/ChangeLog,v 1.17 2005/03/19 17:08:55 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/cmf/Attic/ChangeLog,v 1.18 2005/03/26 14:49:01 radek Exp $
+
+*cmf-1.5.0 (26 Mar 2005)
+
+  26 Mar 2005; Radoslaw Stachowiak <radek@gentoo.org> +cmf-1.5.0.ebuild:
+  version bump in new slot. arches reverted to ~
 
   19 Mar 2005; Jason Wever <weeve@gentoo.org> cmf-1.4.7.ebuild:
   Added ~sparc keyword wrt bug #84791.
